--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
                     <a href="https://www.shanghaitech.edu.cn/eng/">ShanghaiTech University</a>.
                     <br /><br />
 
-                    I am a second-year Master student in Computer Science at ShanghaiTech University, supervised by <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a>.
+                    I am a second-year Master student in Computer Science at ShanghaiTech University,
+                    working with  <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a>.
+                    I also work closely with <a href="https://xmhe.bitbucket.io/">Prof. Xuming He</a> and <a href="http://xu-lan.com/">Prof. Lan Xu</a>.
+
                     I received my bachelor's degree in 2019 from Shandong University.
 
                     <br /><br />
