Add CV and google scholar link

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     mengquan (at) shanghaitech (dot) edu (dot) cn
                   </div>
                   <div>
-                    <a href="https://github.com/MQ66">[GitHub]</a>
-                    <a href="quanmeng.github.io">[Google Scholar]</a>
-                    <a href="quanmeng.github.io">[Download CV]</a>
+                    <a href="https://github.com/MQ66" target="_blank">[GitHub]</a>
+                    <a href="https://scholar.google.com/citations?user=F2xnptoAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
+                    <a href="resume.pdf" target="_blank">[Download CV]</a>
                   </div>
 
                 </div>
@@ -100,14 +100,14 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    Master student in  <a href="http://vic.shanghaitech.edu.cn/">Visual and Data Intelligence Center(VDI)</a>,
-                    <a href="https://sist.shanghaitech.edu.cn/sist_en/">School of Information Science and Technology(SIST)</a>,
-                    <a href="https://www.shanghaitech.edu.cn/eng/">ShanghaiTech University</a>.
+                    Master student in  <a href="http://vic.shanghaitech.edu.cn/" target="_blank">Visual and Data Intelligence Center(VDI)</a>,
+                    <a href="https://sist.shanghaitech.edu.cn/sist_en/" target="_blank">School of Information Science and Technology(SIST)</a>,
+                    <a href="https://www.shanghaitech.edu.cn/eng/" target="_blank">ShanghaiTech University</a>.
                     <br /><br />
 
                     I am a second-year Master student in Computer Science at ShanghaiTech University,
-                    working with  <a href="http://www.yu-jingyi.com/cv/">Prof. Jingyi Yu</a>.
-                    I also work closely with <a href="https://xmhe.bitbucket.io/">Prof. Xuming He</a> and <a href="http://xu-lan.com/">Prof. Lan Xu</a>.
+                    working with  <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a>.
+                    I also work closely with <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a> and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
 
                     I received my bachelor's degree in 2019 from Shandong University.
 
@@ -137,8 +137,8 @@
                             <u>Quan Meng</u>, Anpei Chen, Haimin Luo, Minye Wu, Hao Su, Lan Xu, Xuming He, Jingyi Yu
                         </div>
                         <div>
-                            <a href="https://github.com/MQ66/gnerf">[Code]</a>
-                            <a href="https://arxiv.org/abs/2103.15606">[Paper]</a>
+                            <a href="https://github.com/MQ66/gnerf" target="_blank">[Code]</a>
+                            <a href="https://arxiv.org/abs/2103.15606" target="_blank">[Paper]</a>
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                           <u>Quan Meng</u>, Jiakai Zhang, Qiang Hu, Xuming He, Jingyi Yu
                       </div>
                       <div>
-                        <a href="https://arxiv.org/abs/2008.05892">[Paper]</a>
+                        <a href="https://arxiv.org/abs/2008.05892" target="_blank">[Paper]</a>
                       </div>
                     </div>
                 </div>
