--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                     <a href="https://www.shanghaitech.edu.cn/eng/" target="_blank">ShanghaiTech University</a>.
                     <br /><br />
 
-                    I am a second-year Master student in Computer Science at ShanghaiTech University,
+                    I am a third-year Master student in Computer Science at ShanghaiTech University,
                     working with  <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a>.
                     I also work closely with <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a> and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
 
                     I received my bachelor's degree in 2019 from Shandong University.
 
                     <br /><br />
-                    My research interest lies in 3D computer vision.
+                    My research interest lies in 3D Computer Vision, Generative Models, Computer Graphics.
                 </p>
 
                 <div class='vspace-top'>
