--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quan Meng</title>
+    <title>Quan Meng (孟权)</title>
 
     <!-- Meta tags -->
     <meta charset="utf-8">
@@ -78,7 +78,7 @@
 
                 <div class="col">
                   <div id='header-text-name'>
-                      Quan Meng
+                      Quan Meng (孟权)
                   </div>
                   <div id='header-text-email'>
                     mengquan (at) shanghaitech (dot) edu (dot) cn
@@ -107,7 +107,7 @@
 
                     I am a third-year Master student in Computer Science at ShanghaiTech University,
                     working with  <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a>.
-                    I also work closely with <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a> and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
+                    I also work closely with <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Prof. Hao Su</a>, <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a>, and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
 
                     I received my bachelor's degree in 2019 from Shandong University.
 
