--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     mengquan (at) shanghaitech (dot) edu (dot) cn
                   </div>
                   <div>
-                    <a href="https://github.com/MQ66" target="_blank">[GitHub]</a>
+                    <a href="https://github.com/quan-meng" target="_blank">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=F2xnptoAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
                     <a href="cv/resume.pdf" target="_blank">[Download CV]</a>
                   </div>
@@ -105,11 +105,11 @@
                     <a href="https://www.shanghaitech.edu.cn/eng/" target="_blank">ShanghaiTech University</a>.
                     <br /><br />
 
-                    I am a third-year Master student in Computer Science at ShanghaiTech University,
-                    working with  <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a>.
-                    I also work closely with <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Prof. Hao Su</a>, <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a>, and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
+                    I am a first-year Ph.D. student at Angela Dai’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the TU Munich.
 
-                    I received my bachelor's degree in 2019 from Shandong University.
+                    I received my mashter's degree in 2022 from ShanghaiTech University, working with <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
+
+                    I was fortunate to have worked with <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Prof. Hao Su</a>, <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a>, and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
 
                     <br /><br />
                     My research interest lies in 3D Computer Vision, Generative Models, Computer Graphics.
@@ -137,7 +137,7 @@
                             <u>Quan Meng</u>, Anpei Chen, Haimin Luo, Minye Wu, Hao Su, Lan Xu, Xuming He, Jingyi Yu
                         </div>
                         <div>
-                            <a href="https://github.com/MQ66/gnerf" target="_blank">[Code]</a>
+                            <a href="https://github.com/quan-meng/gnerf" target="_blank">[Code]</a>
                             <a href="https://arxiv.org/abs/2103.15606" target="_blank">[Paper]</a>
                         </div>
                     </div>
