--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   </div>
                   <div>
                     <a href="https://github.com/quan-meng" target="_blank">[GitHub]</a>
-                    <a href="https://scholar.google.com/citations?user=F2xnptoAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
+                    <a href="https://scholar.google.com/citations?user=vwNn_BcAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
                     <a href="cv/resume.pdf" target="_blank">[Download CV]</a>
                   </div>
 
@@ -103,7 +103,7 @@
 
                     I am a first-year Ph.D. student at Angela Dai’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the TU Munich.
 
-                    I received my mashter's degree in 2022 from ShanghaiTech University, working with <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
+                    I received my master's degree in 2022 from ShanghaiTech University, working with <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
 
                     I was fortunate to have worked with <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Prof. Hao Su</a>, <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a>, and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
 
