--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h1>Bio</h1>
                 <p>
 
-                    I am a first-year Ph.D. student at Angela Dai’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the TU Munich.
+                    I am a Ph.D. student at Prof. Angela Dai’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the TU Munich.
 
                     I received my master's degree in 2022 from ShanghaiTech University, working with <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
 
