--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                 <h1>Bio</h1>
                 <p>
 
-                    I am a Ph.D. student at Prof. Angela Dai’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the <a href="https://www.tum.de/en/" target="_blank">TU Munich</a>.
+                    I am a Ph.D. student at Prof. <a href="https://www.professoren.tum.de/en/dai-angela" target="_blank">Angela Dai</a>’s <a href="https://www.3dunderstanding.org" target="_blank">3D AI Lab</a> at the <a href="https://www.tum.de/en/" target="_blank">TU Munich</a>.
 
-                    I received my master's degree in 2022 from ShanghaiTech University, working with <a href="http://www.yu-jingyi.com/cv/" target="_blank">Prof. Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
+                    I received my master's degree in 2022 from ShanghaiTech University, working with Prof. <a href="http://www.yu-jingyi.com/cv/" target="_blank">Jingyi Yu</a> in the Visual Intelligent Center (VIC). Before that, I received my bachelor's degree in 2019 from Shandong University.
 
-                    I was fortunate to have worked with <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Prof. Hao Su</a>, <a href="https://xmhe.bitbucket.io/" target="_blank">Prof. Xuming He</a>, and <a href="http://xu-lan.com/" target="_blank">Prof. Lan Xu</a>.
+                    I was fortunate to have worked with Prof. <a href="https://cseweb.ucsd.edu/~haosu/" target="_blank">Hao Su</a>, Prof. <a href="https://xmhe.bitbucket.io/" target="_blank">Xuming He</a>, and Prof. <a href="http://xu-lan.com/" target="_blank">Lan Xu</a>.
 
                     <br /><br />
                     My research interest lies in 3D Computer Vision, Generative Models, Computer Graphics.
