update lt3sd project page

--- a/projects/lt3sd/index.html
+++ b/projects/lt3sd/index.html
@@ -183,6 +183,7 @@
             <div class="content-block">
                 <img class="img-fluid rounded" src="../../assets/lt3sd/comparison.png" title="Comparisons">
             </div>
+            
             <p class="content-block">
                 We compare unconditional 3D scene generation with diverse 3D diffusion methods PVD, NFD, and BlockFusion. 
                 All methods were trained on the house level of the 3D-FRONT dataset. Our latent tree-based 3D scene diffusion approach synthesizes cleaner surfaces with 
@@ -193,7 +194,11 @@
             <div class="content-block text-center">
                 <img class="img-fluid rounded mx-auto d-block" src="../../assets/lt3sd/outdoor.png" title="Outdoor Scene Generation" style="height: 50%; width: 50%;">
             </div>
-            
+
+            <p class="content-block">
+                Our approach leverages a unified voxel-based representation for 3D scenes that generalizes beyond indoor environments. This enables seamless generation of diverse outdoor scenes, demonstrating the flexibility and robustness of our method across different types of 3D environments.
+            </p>
+
             <h2 class="text-center pt-3">Citation</h2>
             <div class="content-block">
                 <div class="bibtex">
